[gd_scene load_steps=3 format=3 uid="uid://bvgh060edrp7j"]

[ext_resource type="Script" path="res://src/MainMenu/MainMenu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dlpvuna0o368n" path="res://src/Map/TileMap.tscn" id="2_yx611"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -82.5
offset_right = 31.5
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LD-53"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Level selection" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level selection"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="TileMap" parent="." instance=ExtResource("2_yx611")]
layer_0/tile_data = PackedInt32Array(589836, 327681, 3, 589837, 327681, 3, 524301, 327681, 3, 524300, 327681, 3, 458764, 327681, 3, 458763, 327681, 3, 458762, 327681, 3, 458761, 327681, 3, 458760, 327681, 3, 524296, 327681, 3, 524295, 327681, 3, 524294, 327681, 3, 589830, 327681, 3, 655366, 327681, 3, 655365, 327681, 3, 720901, 327681, 3, 786437, 327681, 3, 851973, 327681, 3, 917509, 327681, 3, 983046, 327681, 3, 1048582, 327681, 3, 1048583, 327681, 3, 1114120, 327681, 3, 1114121, 327681, 3, 1114122, 327681, 3, 1114123, 327681, 3, 1114124, 327681, 3, 1048588, 327681, 3, 1048589, 327681, 3, 983053, 327681, 3, 917518, 327681, 3, 851982, 327681, 3, 786446, 327681, 3, 720910, 327681, 3, 655374, 327681, 3, 720907, 327681, 3, 720904, 327681, 3, 851976, 327681, 3, 917512, 327681, 3, 917513, 327681, 3, 983049, 327681, 3, 983050, 327681, 3, 983051, 327681, 3, 917515, 327681, 3, 851979, 327681, 3, 524322, 327681, 3, 524321, 327681, 3, 458784, 327681, 3, 458783, 327681, 3, 458782, 327681, 3, 458781, 327681, 3, 458780, 327681, 3, 458779, 327681, 3, 524315, 327681, 3, 524314, 327681, 3, 524313, 327681, 3, 589849, 327681, 3, 589848, 327681, 3, 655384, 327681, 3, 720920, 327681, 3, 786456, 327681, 3, 786455, 327681, 3, 851991, 327681, 3, 917527, 327681, 3, 983063, 327681, 3, 1048599, 327681, 3, 1114135, 327681, 3, 1179671, 327681, 3, 1179672, 327681, 3, 1179673, 327681, 3, 1179674, 327681, 3, 1179675, 327681, 3, 1179676, 327681, 3, 1179677, 327681, 3, 1179678, 327681, 3, 1179679, 327681, 3, 1179680, 327681, 3, 1179681, 327681, 3, 1114145, 327681, 3, 1048610, 327681, 3, 983075, 327681, 3, 917539, 327681, 3, 852003, 327681, 3, 786467, 327681, 3, 720931, 327681, 3, 720932, 327681, 3, 655396, 327681, 3, 589860, 327681, 3, 589859, 327681, 3, 524323, 327681, 3, 458786, 327681, 3, 458785, 327681, 3, 720923, 327681, 3, 720927, 327681, 3, 917530, 327681, 3, 917531, 327681, 3, 983067, 327681, 3, 983068, 327681, 3, 983069, 327681, 3, 983070, 327681, 3, 917535, 327681, 3)

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Level selection" to="." method="_on_level_selection_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
